--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@types/faker": "^5.5.9",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.46",
+    "@types/ramda": "^0.28.15",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "faker": "^5.5.3",
+    "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
