--- a/package.json
+++ b/package.json
@@ -4,20 +4,31 @@
   "private": true,
   "dependencies": {
     "@adobe/react-spectrum": "^3.19.0",
+    "@tanstack/react-table": "^8.5.11",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react": "12",
     "@testing-library/user-event": "^13.5.0",
+    "@types/debounce": "^1.2.1",
     "@types/faker": "^5.5.9",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.46",
     "@types/ramda": "^0.28.15",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-table": "^7.7.12",
+    "@types/react-window": "^1.8.5",
+    "buffer": "^6.0.3",
+    "debounce": "^1.2.1",
     "faker": "^5.5.3",
+    "nanoid": "^4.0.0",
     "ramda": "^0.28.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "16.9",
+    "react-dom": "16.9",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
+    "react-virtual": "^2.10.4",
+    "react-window": "^1.8.7",
+    "sass": "^1.54.6",
     "typescript": "^4.7.4",
     "use-context-selector": "^1.4.1",
     "web-vitals": "^2.1.4"
