--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.46",
     "@types/ramda": "^0.28.15",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "16.9",
+    "@types/react-dom": "16.9",
     "@types/react-table": "^7.7.12",
     "@types/react-window": "^1.8.5",
+    "@types/throttle-debounce": "^5.0.0",
     "buffer": "^6.0.3",
     "debounce": "^1.2.1",
     "faker": "^5.5.3",
@@ -24,11 +25,12 @@
     "ramda": "^0.28.0",
     "react": "16.9",
     "react-dom": "16.9",
-    "react-scripts": "5.0.1",
+    "react-scripts": "4",
     "react-table": "^7.8.0",
     "react-virtual": "^2.10.4",
     "react-window": "^1.8.7",
     "sass": "^1.54.6",
+    "throttle-debounce": "^5.0.0",
     "typescript": "^4.7.4",
     "use-context-selector": "^1.4.1",
     "web-vitals": "^2.1.4"
